tmp
gcc -Wall -Wextra -Werror -Wpointer-arith -Wwrite-strings -Wformat -Wformat-security -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all -Wstack-protector --param ssp-buffer-size=4 -ftrapv -fPIE -pie -Wl,-z,relro,-z,now -I/usr/include/mysql -DBIG_JOINS=1  -fno-strict-aliasing    -g -DNDEBUG -DTEXTMODE=1 -DFAST=0 -DEXEDIR=\"/var/www/cgi-bin6\" -DEXETXTNAME=\"ipscan-txt.cgi\" -DEXEJSNAME=\"ipscan-js.cgi\" -DEXEFASTTXTNAME=\"ipscan-fast-txt.cgi\" -DEXEFASTJSNAME=\"ipscan-fast-js.cgi\"  -DURIPATH=\"/cgi-bin6\" -DSETUID_AVAILABLE=1 -DUDP_AVAILABLE=1  -c -I/usr/include -I/usr/include/mysql -L/usr/lib -o ipscan_web-txt.o ipscan_web.c
ipscan_web.c: In function ‘create_html_header’:
ipscan_web.c:199:44: error: expected ‘)’ before ‘EXEname’
   printf(" var badfinishURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d\";", session, (uint32_t)timestamp, reconquery, IPSCAN_HTTPTIMEOUT_COMPLETION);
                                            ^
ipscan_web.c:208:43: error: expected ‘)’ before ‘EXEname’
  printf(" var badfinishURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d\";", session, (uint32_t)timestamp, reconquery, IPSCAN_UNSUCCESSFUL_COMPLETION);
                                           ^
ipscan_web.c:217:40: error: expected ‘)’ before ‘EXEname’
  printf(" var finishURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d\";", session, (uint32_t)timestamp, reconquery, IPSCAN_SUCCESSFUL_COMPLETION);
                                        ^
ipscan_web.c:226:44: error: expected ‘)’ before ‘EXEname’
  printf(" var unexpectedURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=\" + myReadyState + myStatus + %d;", session, (uint32_t)timestamp, reconquery, IPSCAN_UNEXPECTED_CHANGE);
                                            ^
ipscan_web.c:236:43: error: expected ‘)’ before ‘EXEname’
  printf(" var evalErrorURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d&string=\" + encodeURIComponent(errorstring);", session, (uint32_t)timestamp, reconquery, IPSCAN_EVAL_ERROR);
                                           ^
ipscan_web.c:246:44: error: expected ‘)’ before ‘EXEname’
  printf(" var otherErrorURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d&string=\" + encodeURIComponent(errorstring);", session, (uint32_t)timestamp, reconquery, IPSCAN_OTHER_ERROR);
                                            ^
ipscan_web.c:254:41: error: expected ‘)’ before ‘EXEname’
  printf(" var navAwayURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=%d\";", session, (uint32_t)timestamp, reconquery, IPSCAN_NAVIGATE_AWAY);
                                         ^
ipscan_web.c:403:39: error: expected ‘)’ before ‘EXEname’
  printf("var updateURL = \""URIPATH"/"EXEname"?session=%"PRIu64"&starttime=%"PRIu32"&%s&fetch=\" + fetches; ", session, (uint32_t)timestamp, reconquery);
                                       ^
ipscan_web.c:428:39: error: expected ‘)’ before ‘EXEname’
  printf(" var startURL = \""URIPATH"/"EXEname"?beginscan=%d&session=%"PRIu64"&starttime=%"PRIu32"&%s\";", MAGICBEGIN, session, (uint32_t)timestamp, reconquery);
                                       ^
ipscan_web.c:135:34: error: unused parameter ‘session’ [-Werror=unused-parameter]
 void create_html_header(uint64_t session, time_t timestamp, uint16_t numports, uint16_t numudpports, char * reconquery)
                                  ^
ipscan_web.c:135:50: error: unused parameter ‘timestamp’ [-Werror=unused-parameter]
 void create_html_header(uint64_t session, time_t timestamp, uint16_t numports, uint16_t numudpports, char * reconquery)
                                                  ^
ipscan_web.c:135:109: error: unused parameter ‘reconquery’ [-Werror=unused-parameter]
 void create_html_header(uint64_t session, time_t timestamp, uint16_t numports, uint16_t numudpports, char * reconquery)
                                                                                                             ^
ipscan_web.c: In function ‘create_html_body’:
ipscan_web.c:491:69: error: ‘EXETXTname’ undeclared (first use in this function)
  printf("the following <a href=\"%s/%s\">link.</a></p>\n", URIPATH, EXETXTname);
                                                                     ^
ipscan_web.c:491:69: note: each undeclared identifier is reported only once for each function it appears in
ipscan_web.c: In function ‘create_html_form’:
ipscan_web.c:663:36: error: expected ‘)’ before ‘EXEname’
  printf("<form action=\""URIPATH"/"EXEname"\" accept-charset=\"ISO-8859-1\" method=\"GET\">\n");
                                    ^
ipscan_web.c: In function ‘create_html5_form’:
ipscan_web.c:770:73: error: expected ‘)’ before ‘EXEname’
  printf("<form onsubmit=\"return checkForm(this);\" action=\""URIPATH"/"EXEname"\" accept-charset=\"ISO-8859-1\" method=\"GET\">\n");
                                                                         ^
cc1: all warnings being treated as errors
Makefile:114: recipe for target 'ipscan_web-txt.o' failed
make: *** [ipscan_web-txt.o] Error 1
